# HeritageMgmt

./: .gitignore  DESKTOP_REWRITE_ARCHITECTURE.md  README.md  REFACTOR_ARCHITECTURE.md
1-National/: 01_中华人民共和国文物保护法.md  02_中华人民共和国文物保护法实施条例.md  03_文物保护工程管理办法.md  04_文物建筑修缮工程全流程管理通知.md  05_文物保护工程资质管理办法.md  06_文物保护工程检查管理办法.md  07_文物保护工程竣工验收管理办法.md  08_文物保护工程设计文件编制深度要求.md  09_文物保护行业标准与技术规范.md  10_长城保护条例.md  11_历史文化名城名镇名村保护条例.md  12_博物馆条例.md
2-Shandong/: 01_山东省文物保护条例.md  02_山东省齐长城保护条例.md  03_山东省红色文化保护传承条例.md  04_其他山东地方性文物法规.md
3-Process/: 01_工程分类与基本原则.md  02_立项与勘察设计流程.md  03_施工监理与验收流程.md  04_资质资格管理体系.md  05_嘉祥县文物保护背景说明.md
app/: DESIGN.md  README.md  admin_handlers.go  analyze.go  app.go  appconfig.go  backup.go  classify_test.go  config.go  db.go  document_handlers.go  document_repo.go  dto.go  export.go  go.mod  go.sum  handlers.go  importer.go  log_repo.go  main.go  migrate.go  ocr.go  project_handlers.go  project_repo.go  project_service.go  recycle_handlers.go  recycle_service.go  render.go  report.go  repository.go  run.bat  run.sh  scan.go  server.go  stats.go  store.go  unit_repo.go
app/assets/: embed.go
app/assets/config/: doc_types.json  workflow.json
app/assets/static/: index.html  sidebar.js  utils.js
app/assets/static/js/: main.js
app/assets/static/js/components/: charts.js
app/assets/static/js/core/: api.js  dom.js  router.js  state.js
app/assets/static/js/views/: backup.js  dashboard.js  logs.js  project.js  recycle.js  stats.js  wizard.js
app/cmd/heritage/: main.go
app/config/: doc_types.json  llm.json  workflow.json
app/internal/classify/: classify.go  classify_test.go  similarity.go
app/internal/config/: config.go  rules.go
app/internal/domain/: analysis.go  doctype.go  project.go  stats.go
app/internal/excelimport/: financials.go  financials_test.go
app/internal/httpapi/: admin_handlers.go  backup_handlers.go  document_handlers.go  export_handlers.go  path_safety.go  project_handlers.go  recycle_handlers.go  render.go  report_handlers.go  server.go  static.go  stats_handlers.go
app/internal/llm/: client.go  timeout.go
app/internal/ocr/: tools.go
app/internal/reporting/: analysis.go  analysis_test.go  pdf.go
app/internal/service/: dto.go  fakes_test.go  import_service.go  ocr_service.go  project_service.go  project_service_test.go  recycle_service.go  repository.go  services.go  stats_service.go  stats_service_test.go
app/internal/store/: db.go  document_repo.go  log_repo.go  migrate.go  project_repo.go  scan.go  unit_repo.go
app/static/: charts.js  index.html  project.js  sidebar.js  style.css  utils.js
desktop/: .gitignore  CMakeLists.txt  README.md
desktop/docker/: Dockerfile  Dockerfile.win-cross  build-win.sh  build.sh  package.sh  toolchain-mingw.cmake
desktop/resources/: heritage.qrc  style.qss
desktop/resources/config/: llm.json  rules.json
desktop/src/: main.cpp  win_zstd_stub.cpp
desktop/src/core/analysis/: AnalysisService.cpp  AnalysisService.h
desktop/src/core/classify/: Classify.cpp  Classify.h
desktop/src/core/config/: AppConfig.cpp  AppConfig.h  ConfigLoader.cpp  ConfigLoader.h
desktop/src/core/dashboard/: DashboardService.cpp  DashboardService.h
desktop/src/core/documents/: DocumentService.cpp  DocumentService.h
desktop/src/core/domain/: AnalysisTypes.h  ConfigTypes.h  DomainTypes.h  StatTypes.h
desktop/src/core/excelimport/: ExcelImport.cpp  ExcelImport.h  Inflate.cpp  Inflate.h  XlsxReader.cpp  XlsxReader.h  ZipReader.cpp  ZipReader.h
desktop/src/core/import/: ImportService.cpp  ImportService.h
desktop/src/core/llm/: Client.cpp  Client.h
desktop/src/core/ocr/: OcrService.cpp  OcrService.h  OcrTools.cpp  OcrTools.h
desktop/src/core/recycle/: RecycleService.cpp  RecycleService.h
desktop/src/core/report/: Analysis.cpp  Analysis.h  Report.cpp  Report.h
desktop/src/core/stats/: StatsService.cpp  StatsService.h
desktop/src/core/storage/: Database.cpp  Database.h  DocumentRepo.cpp  DocumentRepo.h  LogRepo.cpp  LogRepo.h  ProjectRepo.cpp  ProjectRepo.h  ProjectScanner.cpp  ProjectScanner.h  Schema.cpp  Schema.h  UnitRepo.cpp  UnitRepo.h
desktop/src/ui/: MainWindow.cpp  MainWindow.h
desktop/src/ui/dialogs/: CreateProjectDialog.cpp  CreateProjectDialog.h  ProjectEditDialog.cpp  ProjectEditDialog.h  UploadDialog.cpp  UploadDialog.h
desktop/src/ui/views/: DashboardView.cpp  DashboardView.h  LogsView.cpp  LogsView.h  RecycleView.cpp  RecycleView.h  StatsView.cpp  StatsView.h
desktop/src/ui/widgets/: BarChartWidget.cpp  BarChartWidget.h  PieChartWidget.cpp  PieChartWidget.h  ProjectDetailPanel.cpp  ProjectDetailPanel.h
desktop/tests/: AnalysisTest.cpp  CMakeLists.txt  ClassifyTest.cpp  ConfigTest.cpp  DocumentTest.cpp  ExcelTest.cpp  ImportTest.cpp  LlmTest.cpp  ReportTest.cpp  StatsTest.cpp  StorageTest.cpp
desktop/tests/fixtures/: gen_sample_xlsx.py  sample.xlsx
logs/: PROGRESS.md  UI_BEAUTIFY_PROMPT.md
